--- a/src/main/webapp/app/entities/collaborator/collaborator.component.html
+++ b/src/main/webapp/app/entities/collaborator/collaborator.component.html
@@ -1,10 +1,10 @@
 <div>
     <h2 id="page-heading">
         <span jhiTranslate="imputationSqliApp.collaborator.home.title">Collaborators</span>
-        <input type="text"  [(ngModel)]="searchedKey" (keyup)="findBySearchedKey()" placeholder="Search">
+        <input type="text" [(ngModel)]="searchedKey" (keyup)="findBySearchedKey()" placeholder="Search">
         <button *jhiHasAnyAuthority="'ROLE_ADMIN'" id="jh-create-entity"
-            class="btn btn-primary float-right jh-create-entity create-collaborator"
-            [routerLink]="['/collaborator/new']">
+                class="btn btn-primary float-right jh-create-entity create-collaborator"
+                [routerLink]="['/collaborator/new']">
             <fa-icon [icon]="'plus'"></fa-icon>
             <span jhiTranslate="imputationSqliApp.collaborator.home.createLabel">
                 Create new Collaborator
@@ -12,20 +12,24 @@
         </button>
     </h2>
     <jhi-alert></jhi-alert>
-    <br />
-    <div class="table-responsive" *ngIf="collaborators">
-        <table class="table table-striped">
-            <thead>
+    <br/>
+    <div [ngSwitch]="collaborators && collaborators.length>0">
+        <div *ngSwitchCase="false">
+            <p jhiTranslate="global.noDataFound">No element Found.</p>
+        </div>
+        <div class="table-responsive" *ngSwitchCase="true">
+            <table class="table table-striped">
+                <thead>
                 <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
                     <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span>
                         <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th jhiSortBy="firstname"><span
-                            jhiTranslate="imputationSqliApp.collaborator.firstname">Firstname</span>
+                        jhiTranslate="imputationSqliApp.collaborator.firstname">Firstname</span>
                         <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th jhiSortBy="lastname"><span
-                            jhiTranslate="imputationSqliApp.collaborator.lastname">Lastname</span>
+                        jhiTranslate="imputationSqliApp.collaborator.lastname">Lastname</span>
                         <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th jhiSortBy="email"><span jhiTranslate="imputationSqliApp.collaborator.email">Email</span>
@@ -35,13 +39,13 @@
                         <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th jhiSortBy="activity.id"><span
-                            jhiTranslate="imputationSqliApp.collaborator.activity">Activity</span>
+                        jhiTranslate="imputationSqliApp.collaborator.activity">Activity</span>
                         <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th></th>
                 </tr>
-            </thead>
-            <tbody>
+                </thead>
+                <tbody>
                 <tr *ngFor="let collaborator of collaborators ;trackBy: trackId">
                     <td><a [routerLink]="['/collaborator', collaborator.id, 'view' ]">{{collaborator.id}}</a></td>
                     <td>{{collaborator.firstname}}</td>
@@ -62,36 +66,39 @@
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit" [routerLink]="['/collaborator', collaborator.id, 'view' ]"
-                                class="btn btn-info btn-sm">
+                                    class="btn btn-info btn-sm">
                                 <fa-icon [icon]="'eye'"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                             </button>
                             <button *jhiHasAnyAuthority="'ROLE_ADMIN'" type="submit"
-                                [routerLink]="['/collaborator', collaborator.id, 'edit']"
-                                class="btn btn-primary btn-sm">
+                                    [routerLink]="['/collaborator', collaborator.id, 'edit']"
+                                    class="btn btn-primary btn-sm">
                                 <fa-icon [icon]="'pencil-alt'"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                             </button>
                             <button *jhiHasAnyAuthority="'ROLE_ADMIN'" type="submit"
-                                [routerLink]="['/', 'collaborator', { outlets: { popup: collaborator.id + '/delete'} }]"
-                                replaceUrl="true" queryParamsHandling="merge" class="btn btn-danger btn-sm">
+                                    [routerLink]="['/', 'collaborator', { outlets: { popup: collaborator.id + '/delete'} }]"
+                                    replaceUrl="true" queryParamsHandling="merge" class="btn btn-danger btn-sm">
                                 <fa-icon [icon]="'times'"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
                             </button>
                         </div>
                     </td>
                 </tr>
-            </tbody>
-        </table>
-    </div>
-    <div *ngIf="collaborators && collaborators.length">
-        <div class="row justify-content-center">
-            <jhi-item-count [page]="page" [total]="totalItems" [maxSize]="5" [itemsPerPage]="itemsPerPage">
-            </jhi-item-count>
-        </div>
-        <div class="row justify-content-center">
-            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5"
-                [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage(page)"></ngb-pagination>
+                </tbody>
+            </table>
+            <div *ngIf="collaborators && collaborators.length">
+                <div class="row justify-content-center">
+                    <jhi-item-count [page]="page" [total]="totalItems" [maxSize]="5" [itemsPerPage]="itemsPerPage">
+                    </jhi-item-count>
+                </div>
+                <div class="row justify-content-center">
+                    <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage"
+                                    [maxSize]="5"
+                                    [rotate]="true" [boundaryLinks]="true"
+                                    (pageChange)="loadPage(page)"></ngb-pagination>
+                </div>
+            </div>
         </div>
     </div>
 </div>
