--- a/src/main/webapp/app/entities/comparator-app-tbp/comparator-app-tbp.component.html
+++ b/src/main/webapp/app/entities/comparator-app-tbp/comparator-app-tbp.component.html
@@ -5,11 +5,12 @@
     <div class="row justify-content-center" *ngIf="allTeams || myTeam">
         <div>
             <jhi-alert-error></jhi-alert-error>
+            <jhi-alert></jhi-alert>
             <form class="form-inline" name="comparatorForm" role="form" novalidate
                   [ngSwitch]="isAdmin()" (ngSubmit)="compare()">
                 <div class="form-group tbp-import-form" *ngSwitchCase="true">
                     <label class="form-control-label"
-                           for="field_code_project_admin">Code project</label>
+                           for="field_code_project_admin" jhiTranslate="imputationSqliApp.imputation.project_code">Project</label>
                     <select class="form-control" id="field_code_project_admin" name="code_project"
                             [(ngModel)]="appTbpRequestBody.team">
                         <option *ngFor="let team of allTeams" [ngValue]="team">{{team.name}}</option>
@@ -44,7 +45,6 @@
             </form>
         </div>
     </div>
-    <jhi-alert></jhi-alert>
     <br/>
 
     <div *ngIf="comparator">
