--- a/src/main/webapp/app/entities/correspondence/correspondence.component.html
+++ b/src/main/webapp/app/entities/correspondence/correspondence.component.html
@@ -3,8 +3,8 @@
         <span jhiTranslate="imputationSqliApp.correspondence.home.title">Correspondences</span>
         <input type="text" [(ngModel)]="searchedKey" (keyup)="findBySearchedKey()" placeholder="Search">
         <button *jhiHasAnyAuthority="'ROLE_ADMIN'" id="jh-create-entity"
-            class="btn btn-primary float-right jh-create-entity create-correspondence"
-            [routerLink]="['/correspondence/new']">
+                class="btn btn-primary float-right jh-create-entity create-correspondence"
+                [routerLink]="['/correspondence/new']">
             <fa-icon [icon]="'plus'"></fa-icon>
             <span jhiTranslate="imputationSqliApp.correspondence.home.createLabel">
                 Create new Correspondence
@@ -12,10 +12,14 @@
         </button>
     </h2>
     <jhi-alert></jhi-alert>
-    <br />
-    <div class="table-responsive" *ngIf="correspondences">
-        <table class="table table-striped">
-            <thead>
+    <br/>
+    <div [ngSwitch]="correspondences && correspondences.length>0">
+        <div *ngSwitchCase="false">
+            <p jhiTranslate="global.noDataFound">No element Found.</p>
+        </div>
+        <div class="table-responsive" *ngSwitchCase="true">
+            <table class="table table-striped">
+                <thead>
                 <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
                     <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span>
                         <fa-icon [icon]="'sort'"></fa-icon>
@@ -30,13 +34,13 @@
                         <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th jhiSortBy="collaborator.id"><span
-                            jhiTranslate="imputationSqliApp.correspondence.collaborator">Collaborator</span>
+                        jhiTranslate="imputationSqliApp.correspondence.collaborator">Collaborator</span>
                         <fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th></th>
                 </tr>
-            </thead>
-            <tbody>
+                </thead>
+                <tbody>
                 <tr *ngFor="let correspondence of correspondences ;trackBy: trackId">
                     <td><a [routerLink]="['/correspondence', correspondence.id, 'view' ]">{{correspondence.id}}</a></td>
                     <td>{{correspondence.idAPP}}</td>
@@ -51,36 +55,39 @@
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit" [routerLink]="['/correspondence', correspondence.id, 'view' ]"
-                                class="btn btn-info btn-sm">
+                                    class="btn btn-info btn-sm">
                                 <fa-icon [icon]="'eye'"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                             </button>
                             <button *jhiHasAnyAuthority="'ROLE_ADMIN'" type="submit"
-                                [routerLink]="['/correspondence', correspondence.id, 'edit']"
-                                class="btn btn-primary btn-sm">
+                                    [routerLink]="['/correspondence', correspondence.id, 'edit']"
+                                    class="btn btn-primary btn-sm">
                                 <fa-icon [icon]="'pencil-alt'"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                             </button>
                             <button *jhiHasAnyAuthority="'ROLE_ADMIN'" type="submit"
-                                [routerLink]="['/', 'correspondence', { outlets: { popup: correspondence.id + '/delete'} }]"
-                                replaceUrl="true" queryParamsHandling="merge" class="btn btn-danger btn-sm">
+                                    [routerLink]="['/', 'correspondence', { outlets: { popup: correspondence.id + '/delete'} }]"
+                                    replaceUrl="true" queryParamsHandling="merge" class="btn btn-danger btn-sm">
                                 <fa-icon [icon]="'times'"></fa-icon>
                                 <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
                             </button>
                         </div>
                     </td>
                 </tr>
-            </tbody>
-        </table>
-    </div>
-    <div *ngIf="correspondences && correspondences.length">
-        <div class="row justify-content-center">
-            <jhi-item-count [page]="page" [total]="totalItems" [maxSize]="5" [itemsPerPage]="itemsPerPage">
-            </jhi-item-count>
-        </div>
-        <div class="row justify-content-center">
-            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5"
-                [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage(page)"></ngb-pagination>
+                </tbody>
+            </table>
+            <div *ngIf="correspondences && correspondences.length">
+                <div class="row justify-content-center">
+                    <jhi-item-count [page]="page" [total]="totalItems" [maxSize]="5" [itemsPerPage]="itemsPerPage">
+                    </jhi-item-count>
+                </div>
+                <div class="row justify-content-center">
+                    <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage"
+                                    [maxSize]="5"
+                                    [rotate]="true" [boundaryLinks]="true"
+                                    (pageChange)="loadPage(page)"></ngb-pagination>
+                </div>
+            </div>
         </div>
     </div>
 </div>
