--- a/src/main/webapp/app/entities/timesheet-app/timesheet-app.component.html
+++ b/src/main/webapp/app/entities/timesheet-app/timesheet-app.component.html
@@ -1,4 +1,4 @@
-<div>
+    <div>
     <h2 id="page-heading">
         <span jhiTranslate="global.menu.entities.app-timesheet">APP Timesheet</span>
     </h2>
@@ -9,7 +9,7 @@
                   [ngSwitch]="isAdmin()" (ngSubmit)="getTimesheet()">
                 <div class="form-group tbp-import-form" *ngSwitchCase="true">
                     <label class="form-control-label"
-                           for="field_code_project_admin">Code project</label>
+                           for="field_code_project_admin" jhiTranslate="imputationSqliApp.imputation.project_code">Project</label>
                     <select class="form-control" id="field_code_project_admin" name="code_project"
                             [(ngModel)]="appRequestBody.agresso">
                         <option *ngFor="let team of allTeams" [value]="team.agresso">{{team.name}}</option>
