render a message when user did not submit form yet

--- a/src/main/webapp/app/entities/timesheet-app/timesheet-app.component.html
+++ b/src/main/webapp/app/entities/timesheet-app/timesheet-app.component.html
@@ -63,39 +63,46 @@
     </div>
     <jhi-alert></jhi-alert>
     <br/>
-    <div *ngIf="imputations">
-        <div class="table-responsive" *ngFor="let imputation of imputations">
-            <h3>
+    <div [ngSwitch]="isFilledImputation()">
+        <div *ngSwitchCase="true">
+            <div class="table-responsive" *ngFor="let imputation of imputations">
+                <h3>
                 <span jhiTranslate="imputationSqliApp.imputation.yearMonth"
                       [translateValues]="{year:imputation.year, month: imputation.month}">Month : </span>
-            </h3>
-            <table class="table table-bordered table-hover table-sm">
-                <thead>
-                <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse">
-                    <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span>
-                    </th>
-                    <th jhiSortBy="month"><span>Collaborator</span>
-                    </th>
-                    <th jhiSortBy="year"><span>Total</span>
-                    </th>
-                    <th *ngFor="let day of imputationDays.get(imputation)"
-                        [id]="day">{{day + '/' + imputation.month}}</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr *ngFor="let monthlyImputation of imputation.monthlyImputations">
-                    <td>{{monthlyImputation.collaborator.id}}</td>
-                    <td><a
-                        [routerLink]="['/collaborator', monthlyImputation.collaborator.id, 'view' ]">{{monthlyImputation.collaborator.lastname + ' ' + monthlyImputation.collaborator.firstname}}</a>
-                    </td>
-                    <td class="text-center"><b>{{monthlyImputation.total}}</b></td>
-                    <td class="text-center" *ngFor="let day of imputationDays.get(imputation)" [id]="day">
+                </h3>
+                <table class="table table-bordered table-hover table-sm">
+                    <thead>
+                    <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse">
+                        <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span>
+                        </th>
+                        <th jhiSortBy="month"><span>Collaborator</span>
+                        </th>
+                        <th jhiSortBy="year"><span>Total</span>
+                        </th>
+                        <th *ngFor="let day of imputationDays.get(imputation)"
+                            [id]="day">{{day + '/' + imputation.month}}</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let monthlyImputation of imputation.monthlyImputations">
+                        <td>{{monthlyImputation.collaborator.id}}</td>
+                        <td><a
+                            [routerLink]="['/collaborator', monthlyImputation.collaborator.id, 'view' ]">{{monthlyImputation.collaborator.lastname + ' ' + monthlyImputation.collaborator.firstname}}</a>
+                        </td>
+                        <td class="text-center"><b>{{monthlyImputation.total}}</b></td>
+                        <td class="text-center" *ngFor="let day of imputationDays.get(imputation)" [id]="day">
                         <span
                             *ngFor="let dailyImputation of monthlyImputation.dailyImputations">{{day == dailyImputation.day ? dailyImputation.charge : ''}}</span>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="nothingToShow" *ngSwitchCase="false">
+            <span jhiTranslate="global.nothingToShow">There is nothing to show, please fill the form and submit.</span>
+            <br/>
+            <span><fa-icon icon="search"></fa-icon></span>
         </div>
     </div>
 </div>
