--- a/src/main/webapp/content/css/global.css
+++ b/src/main/webapp/content/css/global.css
@@ -266,3 +266,8 @@ ui bootstrap tweaks
 #notify-all {
     margin-bottom: 15px;
 }
+
+.nothingToShow {
+    text-align: center;
+    font-size: xx-large;
+}
