--- a/src/main/webapp/app/entities/timesheet-ppmc/timesheet-ppmc.component.html
+++ b/src/main/webapp/app/entities/timesheet-ppmc/timesheet-ppmc.component.html
@@ -74,9 +74,9 @@
             <tr>
                 <th><span>Collaborator</span>
                 </th>
-                <th><span>Total</span>
+                <th class="text-center"><span>Total</span>
                 </th>
-                <th *ngFor="let day of days" [id]="day">{{day + '/' + imputation.month}}</th>
+                <th class="text-center" *ngFor="let day of days" [id]="day">{{day + '/' + imputation.month}}</th>
             </tr>
             </thead>
             <tbody>
