--- a/src/main/webapp/app/entities/timesheet-tbp/timesheet-tbp.component.html
+++ b/src/main/webapp/app/entities/timesheet-tbp/timesheet-tbp.component.html
@@ -51,11 +51,11 @@
                 <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse">
                     <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span>
                     </th>
-                    <th jhiSortBy="month"><span>Collaborator</span>
+                    <th ><span>Collaborator</span>
                     </th>
-                    <th jhiSortBy="year"><span>Total</span>
+                    <th class="text-center"><span>Total</span>
                     </th>
-                    <th *ngFor="let day of imputationDays.get(imputation)" [id]="day">{{day + '/' + imputation.month}}</th>
+                    <th class="text-center" *ngFor="let day of imputationDays.get(imputation)" [id]="day">{{day + '/' + imputation.month}}</th>
                 </tr>
                 </thead>
                 <tbody>
