--- a/src/main/resources/templates/mail/notificationEmail.html
+++ b/src/main/resources/templates/mail/notificationEmail.html
@@ -87,9 +87,9 @@
         <tr>
             <td bgcolor="#eaeaea" style="padding: 40px 30px 40px 30px;">
                 <p>Bonjour <strong
-                    th:text="' '+${notification.getCollaborator().getFirstname()} + ' ' + ${notification.getCollaborator().getLastname()} +' ,'"></strong>
+                    th:text="' '+${notification.getCollaborator().getFirstname()} + ' ' + ${notification.getCollaborator().getLastname()} +','"></strong>
                 </p>
-                <p>Je vous invite à revoir vos imputations afin de les corriger ou de justifier la différence,</p>
+                <p>Je vous invite à revoir vos imputations afin de les corriger ou de justifier l'écart,</p>
                 <p>Merci.</p>
             </td>
         </tr>
