--- a/src/main/webapp/app/entities/comparator-app-ppmc-advanced/comparator-app-ppmc-advanced.component.html
+++ b/src/main/webapp/app/entities/comparator-app-ppmc-advanced/comparator-app-ppmc-advanced.component.html
@@ -58,8 +58,8 @@
             </form>
         </div>
     </div>
-    <div>
-        <div class="table-responsive" *ngIf="comparator">
+    <div [ngSwitch]="isFilledImputation()">
+        <div class="table-responsive" *ngSwitchCase="true">
             <button class="btn btn-info btn-sm float-right" id="notify-all" type="submit" (click)="notifyCollabsWithGap()">
                 <fa-icon [icon]="'envelope'"></fa-icon>
                 <span jhiTranslate="imputationSqliApp.imputation.notifyAll">
@@ -120,6 +120,11 @@
                 <tr>
                 </tbody>
             </table>
+        </div>
+        <div class="nothingToShow" *ngSwitchCase="false">
+            <span jhiTranslate="global.nothingToShow">There is nothing to show, please fill the form and submit.</span>
+            <br/>
+            <span><fa-icon icon="search"></fa-icon></span>
         </div>
     </div>
 </div>
