--- a/src/main/webapp/app/entities/comparator-app-tbp/comparator-app-tbp.component.html
+++ b/src/main/webapp/app/entities/comparator-app-tbp/comparator-app-tbp.component.html
@@ -47,8 +47,8 @@
     </div>
     <br/>
 
-    <div *ngIf="comparator">
-        <div class="table-responsive">
+    <div [ngSwitch]="isFilledImputation()">
+        <div class="table-responsive" *ngSwitchCase="true">
             <table class="table table-bordered table-hover table-sm">
                 <thead>
                 <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse">
@@ -73,11 +73,16 @@
                     </td>
                     <td class="text-center"><b>{{element.totalApp}}</b></td>
                     <td class="text-center"><b>{{element.totalCompared}}</b></td>
-                    <td class="text-center" [ngStyle]="{color:getcolor(element.difference)}">
+                    <td class="text-center" [ngStyle]="{color:getColor(element.difference)}">
                         <b>{{element.difference}}</b></td>
                 </tr>
                 </tbody>
             </table>
+        </div>
+        <div class="nothingToShow" *ngSwitchCase="false">
+            <span jhiTranslate="global.nothingToShow">There is nothing to show, please fill the form and submit.</span>
+            <br/>
+            <span><fa-icon icon="search"></fa-icon></span>
         </div>
     </div>
 
