--- a/src/main/webapp/content/css/global.css
+++ b/src/main/webapp/content/css/global.css
@@ -25,7 +25,7 @@ body {
     position: relative;
     padding-bottom: 2rem;
     min-height: 100%;
-    background: white;
+    /*background: white;*/
 }
 
 a {
@@ -70,6 +70,7 @@ Generic styles
     padding: 1.5%;
     margin-top: 20px;
     border: none;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 .error {
@@ -272,3 +273,8 @@ ui bootstrap tweaks
     font-size: xx-large;
     margin: 10%;
 }
+
+/*body {*/
+/*background-image: url("../images/meeting.jpg");*/
+/*background-size: 100% 100%;*/
+/*}*/
