--- a/src/main/webapp/app/entities/correspondence/correspondence.component.html
+++ b/src/main/webapp/app/entities/correspondence/correspondence.component.html
@@ -15,7 +15,7 @@
     <br/>
     <div [ngSwitch]="correspondences && correspondences.length>0">
         <div *ngSwitchCase="false">
-            <p jhiTranslate="global.noDataFound">No element Found.</p>
+            <h2 class="text-center" jhiTranslate="global.noDataFound">No element Found.</h2>
         </div>
         <div class="table-responsive" *ngSwitchCase="true">
             <table class="table table-striped">
@@ -76,17 +76,17 @@
                 </tr>
                 </tbody>
             </table>
-            <div *ngIf="correspondences && correspondences.length">
-                <div class="row justify-content-center">
-                    <jhi-item-count [page]="page" [total]="totalItems" [maxSize]="5" [itemsPerPage]="itemsPerPage">
-                    </jhi-item-count>
-                </div>
-                <div class="row justify-content-center">
-                    <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage"
-                                    [maxSize]="5"
-                                    [rotate]="true" [boundaryLinks]="true"
-                                    (pageChange)="loadPage(page)"></ngb-pagination>
-                </div>
+        </div>
+        <div *ngIf="correspondences && correspondences.length>0">
+            <div class="row justify-content-center">
+                <jhi-item-count [page]="page" [total]="totalItems" [maxSize]="5" [itemsPerPage]="itemsPerPage">
+                </jhi-item-count>
+            </div>
+            <div class="row justify-content-center">
+                <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage"
+                                [maxSize]="5"
+                                [rotate]="true" [boundaryLinks]="true"
+                                (pageChange)="loadPage(page)"></ngb-pagination>
             </div>
         </div>
     </div>
