--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -193,13 +193,30 @@
                 </ul>
             </li>
 
-            <li *ngSwitchCase="true">
-                <a class="nav-link" routerLink="statistics" (click)="collapseNavbar()">
+            <li *ngSwitchCase="true" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active"
+                [routerLinkActiveOptions]="{exact: true}">
+                <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="statistics-menu">
                     <span>
                         <fa-icon icon="chart-bar"></fa-icon>
-                        <span jhiTranslate="global.menu.statistics">Statistiques</span>
+                        <span jhiTranslate="global.menu.statistics">
+                            Statistics
+                        </span>
                     </span>
                 </a>
+                <ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="entity-menu">
+                    <li>
+                        <a class="dropdown-item" routerLink="statistics" (click)="collapseNavbar()">
+                            <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
+                            <span jhiTranslate="global.menu.gapTeamStatistics">Statistiques</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" routerLink="gap-variation-statistics" (click)="collapseNavbar()">
+                            <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
+                            <span jhiTranslate="global.menu.gapVariationStatistics">Statistiques global</span>
+                        </a>
+                    </li>
+                </ul>
             </li>
 
             <li *jhiHasAnyAuthority="'ROLE_ADMIN'" ngbDropdown class="nav-item dropdown pointer"
@@ -218,43 +235,43 @@
                             <span jhiTranslate="global.menu.admin.userManagement">User management</span>
                         </a>
                     </li>
-                    <!--<li>-->
-                    <!--<a class="dropdown-item" routerLink="admin/jhi-metrics" routerLinkActive="active" (click)="collapseNavbar()">-->
-                    <!--<fa-icon icon="tachometer-alt" fixedWidth="true"></fa-icon>-->
-                    <!--<span jhiTranslate="global.menu.admin.metrics">Metrics</span>-->
-                    <!--</a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                    <!--<a class="dropdown-item" routerLink="admin/jhi-health" routerLinkActive="active" (click)="collapseNavbar()">-->
-                    <!--<fa-icon icon="heart" fixedWidth="true"></fa-icon>-->
-                    <!--<span jhiTranslate="global.menu.admin.health">Health</span>-->
-                    <!--</a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                    <!--<a class="dropdown-item" routerLink="admin/jhi-configuration" routerLinkActive="active" (click)="collapseNavbar()">-->
-                    <!--<fa-icon icon="list" fixedWidth="true"></fa-icon>-->
-                    <!--<span jhiTranslate="global.menu.admin.configuration">Configuration</span>-->
-                    <!--</a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                    <!--<a class="dropdown-item" routerLink="admin/audits" routerLinkActive="active" (click)="collapseNavbar()">-->
-                    <!--<fa-icon icon="bell" fixedWidth="true"></fa-icon>-->
-                    <!--<span jhiTranslate="global.menu.admin.audits">Audits</span>-->
-                    <!--</a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                    <!--<a class="dropdown-item" routerLink="admin/logs" routerLinkActive="active" (click)="collapseNavbar()">-->
-                    <!--<fa-icon icon="tasks" fixedWidth="true"></fa-icon>-->
-                    <!--<span jhiTranslate="global.menu.admin.logs">Logs</span>-->
-                    <!--</a>-->
-                    <!--</li>-->
-                    <!--<li *ngIf="swaggerEnabled">-->
-                    <!--<a class="dropdown-item" routerLink="admin/docs" routerLinkActive="active" (click)="collapseNavbar()">-->
-                    <!--<fa-icon icon="book" fixedWidth="true"></fa-icon>-->
-                    <!--<span jhiTranslate="global.menu.admin.apidocs">API</span>-->
-                    <!--</a>-->
-                    <!--</li>-->
-                    <!-- jhipster-needle-add-element-to-admin-menu - JHipster will add entities to the admin menu here -->
+                    <li>
+                    <a class="dropdown-item" routerLink="admin/jhi-metrics" routerLinkActive="active" (click)="collapseNavbar()">
+                    <fa-icon icon="tachometer-alt" fixedWidth="true"></fa-icon>
+                    <span jhiTranslate="global.menu.admin.metrics">Metrics</span>
+                    </a>
+                    </li>
+                    <li>
+                    <a class="dropdown-item" routerLink="admin/jhi-health" routerLinkActive="active" (click)="collapseNavbar()">
+                    <fa-icon icon="heart" fixedWidth="true"></fa-icon>
+                    <span jhiTranslate="global.menu.admin.health">Health</span>
+                    </a>
+                    </li>
+                    <li>
+                    <a class="dropdown-item" routerLink="admin/jhi-configuration" routerLinkActive="active" (click)="collapseNavbar()">
+                    <fa-icon icon="list" fixedWidth="true"></fa-icon>
+                    <span jhiTranslate="global.menu.admin.configuration">Configuration</span>
+                    </a>
+                    </li>
+                    <li>
+                    <a class="dropdown-item" routerLink="admin/audits" routerLinkActive="active" (click)="collapseNavbar()">
+                    <fa-icon icon="bell" fixedWidth="true"></fa-icon>
+                    <span jhiTranslate="global.menu.admin.audits">Audits</span>
+                    </a>
+                    </li>
+                    <li>
+                    <a class="dropdown-item" routerLink="admin/logs" routerLinkActive="active" (click)="collapseNavbar()">
+                    <fa-icon icon="tasks" fixedWidth="true"></fa-icon>
+                    <span jhiTranslate="global.menu.admin.logs">Logs</span>
+                    </a>
+                    </li>
+                    <li *ngIf="swaggerEnabled">
+                    <a class="dropdown-item" routerLink="admin/docs" routerLinkActive="active" (click)="collapseNavbar()">
+                    <fa-icon icon="book" fixedWidth="true"></fa-icon>
+                    <span jhiTranslate="global.menu.admin.apidocs">API</span>
+                    </a>
+                    </li>
+                     <!--jhipster-needle-add-element-to-admin-menu - JHipster will add entities to the admin menu here-->
                 </ul>
             </li>
             <li ngbDropdown class="nav-item dropdown pointer" *ngIf="languages && languages.length > 1">
