get and render jira imputations

--- a/src/main/webapp/app/entities/team/team-detail.component.html
+++ b/src/main/webapp/app/entities/team/team-detail.component.html
@@ -9,6 +9,10 @@
                 <dd>
                     <span>{{team.name}}</span>
                 </dd>
+                <dt><span jhiTranslate="imputationSqliApp.team.displayName">Display Name</span></dt>
+                <dd>
+                    <span>{{team.displayName}}</span>
+                </dd>
                 <dt><span jhiTranslate="imputationSqliApp.team.deliveryCoordinator">Delivery Coordinator</span></dt>
                 <dd>
                     <div *ngIf="team.deliveryCoordinator">
