--- a/src/main/webapp/app/entities/timesheet-ppmc/timesheet-ppmc.component.html
+++ b/src/main/webapp/app/entities/timesheet-ppmc/timesheet-ppmc.component.html
@@ -77,9 +77,9 @@
             <table class="table table-bordered table-hover table-sm">
                 <thead>
                 <tr>
-                    <th><span>Collaborator</span>
+                    <th jhiTranslate="imputationSqliApp.imputation.collaborator"><span>Collaborator</span>
                     </th>
-                    <th><span>Total</span>
+                    <th jhiTranslate="imputationSqliApp.imputation.total"><span>Total</span>
                     </th>
                     <th *ngFor="let day of days" [id]="day">{{day + '/' + imputation.month}}</th>
                 </tr>
