--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -151,6 +151,13 @@
                             <span>TBP</span>
                         </a>
                     </li>
+                    <li>
+                        <a class="dropdown-item" routerLink="timesheet-jira" routerLinkActive="active"
+                           [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                            <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
+                            <span>JIRA</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
 
