--- a/src/main/webapp/app/entities/team/team-update.component.html
+++ b/src/main/webapp/app/entities/team/team-update.component.html
@@ -28,6 +28,24 @@
                 </div>
 
                 <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="imputationSqliApp.team.displayName" for="field_display_name">Display Name</label>
+                    <input type="text" class="form-control" name="displayName" id="field_display_name" #displayName="ngModel"
+                        [(ngModel)]="team.displayName" required minlength="3" />
+                    <div *ngIf="displayName.dirty && displayName.invalid">
+                        <small class="form-text text-danger"
+                               *ngIf="displayName.errors.required" jhiTranslate="entity.validation.required">
+                            This field is required.
+                        </small>
+
+                        <small class="form-text text-danger"
+                               *ngIf="displayName.errors.minlength" jhiTranslate="entity.validation.minlength"
+                               [translateValues]="{min: 3}">
+                            This field cannot be longer than 3 characters.
+                        </small>
+                    </div>
+                </div>
+
+                <div class="form-group">
                     <label class="form-control-label" jhiTranslate="imputationSqliApp.team.deliveryCoordinator" for="field_deliveryCoordinator">Delivery Coordinator</label>
                     <select class="form-control" id="field_deliveryCoordinator" name="deliveryCoordinator" [(ngModel)]="team.deliveryCoordinator">
                         <option [ngValue]="null"></option>
