rename statistics component

--- a/src/main/webapp/app/entities/gap-per-team-statistics/gap-per-team-statistics.component.html
+++ b/src/main/webapp/app/entities/gap-per-team-statistics/gap-per-team-statistics.component.html
@@ -1,6 +1,6 @@
 <div>
     <h2 id="page-heading">
-        <span jhiTranslate="global.menu.entities.app-timesheet">APP Timesheet</span>
+        <span jhiTranslate="global.menu.entities.statisticsPerTeam">Team statistics</span>
     </h2>
     <div class="row justify-content-center" *ngIf="allTeams || myTeam">
         <jhi-alert-error></jhi-alert-error>
