--- a/src/main/webapp/app/entities/gap-variation-statistics/gap-variation-statistics.component.html
+++ b/src/main/webapp/app/entities/gap-variation-statistics/gap-variation-statistics.component.html
@@ -1,6 +1,6 @@
 <div>
     <h2 id="page-heading">
-        <span jhiTranslate="global.menu.entities.app-timesheet">APP Timesheet</span>
+        <span jhiTranslate="global.menu.entities.globalStatistics">APP Timesheet</span>
     </h2>
     <div class="row justify-content-center" *ngIf="allTeams || myTeam">
         <div>
