--- a/src/main/webapp/app/shared/authTbp/auth-tbp.component.html
+++ b/src/main/webapp/app/shared/authTbp/auth-tbp.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h4 class="modal-title" jhiTranslate="global.menu.entities.TbpAuthTitle">Authentification TBP</h4>
+    <h4 class="modal-title" jhiTranslate="global.menu.entities.tbpAuthTitle">Authentification TBP</h4>
     <button aria-label="Close" data-dismiss="modal" class="close" type="button" (click)="activeModal.dismiss('closed')"><span aria-hidden="true">x</span>
     </button>
 </div>
