--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -223,6 +223,12 @@
                             <span jhiTranslate="global.menu.gapVariationStatistics">Statistiques global</span>
                         </a>
                     </li>
+                    <li>
+                        <a class="dropdown-item" routerLink="ppmc-projects-workloged-statistics" (click)="collapseNavbar()">
+                            <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
+                            <span jhiTranslate="global.menu.ppmcProjectsWorlogs">Statistiques global</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
 
