Jira Issue types worklogs statistics

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -220,13 +220,19 @@
                     <li>
                         <a class="dropdown-item" routerLink="gap-variation-statistics" (click)="collapseNavbar()">
                             <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
-                            <span jhiTranslate="global.menu.gapVariationStatistics">Statistiques global</span>
+                            <span jhiTranslate="global.menu.gapVariationStatistics">Statistiques globales</span>
                         </a>
                     </li>
                     <li>
                         <a class="dropdown-item" routerLink="ppmc-projects-workloged-statistics" (click)="collapseNavbar()">
                             <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
-                            <span jhiTranslate="global.menu.ppmcProjectsWorlogs">Statistiques global</span>
+                            <span jhiTranslate="global.menu.ppmcProjectsWorlogs">Statistiques sur les journaux de travail des projets PPMC</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" routerLink="issue-type-statistics" (click)="collapseNavbar()">
+                            <fa-icon icon="asterisk" fixedWidth="true"></fa-icon>
+                            <span jhiTranslate="global.menu.issueTypeStatistics">Statistiques sue les types de problemes</span>
                         </a>
                     </li>
                 </ul>
