--- a/src/main/webapp/app/entities/issue-type-statistics/issue-type-statistics.component.html
+++ b/src/main/webapp/app/entities/issue-type-statistics/issue-type-statistics.component.html
@@ -1,6 +1,6 @@
 <div>
     <h2 id="page-heading">
-        <span jhiTranslate="global.menu.entities.ppmcProjectWorklogedStatistics">PPPM Project Worklog Statistics</span>
+        <span jhiTranslate="global.menu.entities.issueTypeStatistics">Issue Types Statistics</span>
     </h2>
     <div class="row justify-content-center" *ngIf="allTeams || myTeam">
         <div>
@@ -20,11 +20,13 @@
                 </div>
                 <label class="form-control-label" jhiTranslate="imputationSqliApp.imputation.start_date"
                        for="field_start_date">Start Date</label>
-                <input type="date" id="field_start_date" class="form-control" name="start" [(ngModel)]="requestBody.startDate" required/>
+                <input type="date" id="field_start_date" class="form-control" name="start"
+                       [(ngModel)]="requestBody.startDate" required/>
 
                 <label class="form-control-label" jhiTranslate="imputationSqliApp.imputation.end_date"
                        for="field_end_date">Start Date</label>
-                <input type="date" id="field_end_date" class="form-control" name="end" [(ngModel)]="requestBody.endDate" required/>
+                <input type="date" id="field_end_date" class="form-control" name="end" [(ngModel)]="requestBody.endDate"
+                       required/>
                 <div class="form-group tbp-import-form">
                     <button type="submit" id="tbp-timesheet-import-button" class="btn btn-primary float-right">
                         <span jhiTranslate="global.menu.statistics">
@@ -41,12 +43,11 @@
     <div class="row">
         <!-- statistics -->
         <div class="col-6 card">
-            <p>PPPM Projects Work log</p>
-            <div #worklogsChart style="width: 100%;min-height: 700px; max-height: 1000px"></div>
+            <p>Issue Types Work log</p>
+            <div #issueTypeChart style="width: 100%;min-height: 700px; max-height: 1000px"></div>
         </div>
         <div class="col-6 card">
-            <p>PPPM Projects Frequency</p>
+            <p>Issue Types Frequency</p>
             <div #frequancyChart style="width: 100%;min-height: 700px; max-height: 1000px"></div>
         </div>
     </div>
-</div>
