--- a/src/main/webapp/app/entities/team/team-update.component.html
+++ b/src/main/webapp/app/entities/team/team-update.component.html
@@ -44,6 +44,40 @@
                         </small>
                     </div>
                 </div>
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="imputationSqliApp.team.agresso" for="field_agresso">Agresso</label>
+                    <input type="text" class="form-control" name="agresso" id="field_agresso" #agresso="ngModel"
+                        [(ngModel)]="team.agresso" required minlength="3" />
+                    <div *ngIf="agresso.dirty && agresso.invalid">
+                        <small class="form-text text-danger"
+                               *ngIf="agresso.errors.required" jhiTranslate="entity.validation.required">
+                            This field is required.
+                        </small>
+
+                        <small class="form-text text-danger"
+                               *ngIf="agresso.errors.minlength" jhiTranslate="entity.validation.minlength"
+                               [translateValues]="{min: 3}">
+                            This field cannot be longer than 3 characters.
+                        </small>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="imputationSqliApp.team.idTbp" for="field_id_tbp">Id TBP</label>
+                    <input type="text" class="form-control" name="idTbp" id="field_id_tbp" #idTbp="ngModel"
+                        [(ngModel)]="team.idTbp" required minlength="3" />
+                    <div *ngIf="idTbp.dirty && idTbp.invalid">
+                        <small class="form-text text-danger"
+                               *ngIf="idTbp.errors.required" jhiTranslate="entity.validation.required">
+                            This field is required.
+                        </small>
+
+                        <small class="form-text text-danger"
+                               *ngIf="idTbp.errors.minlength" jhiTranslate="entity.validation.minlength"
+                               [translateValues]="{min: 3}">
+                            This field cannot be longer than 3 characters.
+                        </small>
+                    </div>
+                </div>
 
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="imputationSqliApp.team.deliveryCoordinator" for="field_deliveryCoordinator">Delivery Coordinator</label>
