refactor jiraImputationRessourceService and Home page

--- a/src/main/webapp/app/entities/issue-type-statistics/issue-type-statistics.component.html
+++ b/src/main/webapp/app/entities/issue-type-statistics/issue-type-statistics.component.html
@@ -40,14 +40,18 @@
         <br>
         <br>
     </div>
+    <!-- statistics -->
     <div class="row">
-        <!-- statistics -->
-        <div class="col-6 card">
-            <p>Issue Types Work log</p>
-            <div #issueTypeChart style="width: 100%;min-height: 700px; max-height: 1000px"></div>
+        <div class="col-6">
+            <div class="card" style="padding: 8px 0px 0px 8px">
+                <p>Issue Types Work log</p>
+                <div #issueTypeChart style="width: 100%;min-height: 700px; max-height: 1000px"></div>
+            </div>
         </div>
-        <div class="col-6 card">
-            <p>Issue Types Frequency</p>
-            <div #frequancyChart style="width: 100%;min-height: 700px; max-height: 1000px"></div>
+        <div class="col-6">
+            <div class="card" style="padding: 8px 0px 0px 8px">
+                <p>Issue Types Frequency</p>
+                <div #frequancyChart style="width: 100%;min-height: 700px; max-height: 1000px"></div>
+            </div>
         </div>
     </div>
