--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,7 +1,6 @@
 <div class="row justify-content-center">
     <div class="col-md-6">
         <h1 class="display-4" jhiTranslate="home.title">Welcome</h1>
-        <p class="lead" jhiTranslate="home.subtitle">This is your homepage</p>
 
         <div [ngSwitch]="isAuthenticated()">
             <div class="alert alert-success" *ngSwitchCase="true">
@@ -9,16 +8,14 @@
                     [translateValues]="{username: account.login}"> You are logged in as "{{account.login}}". </span>
             </div>
 
-            <div class="alert alert-warning" *ngSwitchCase="false">
-                <span jhiTranslate="global.messages.info.authenticated.prefix">If you want to </span>
-                <a class="alert-link" (click)="login()" jhiTranslate="global.messages.info.authenticated.link">sign in</a><span jhiTranslate="global.messages.info.authenticated.suffix">, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").</span>
+            <div class="alert alert-warning text-center" *ngSwitchCase="false">
+                <a class="alert-link" (click)="login()" jhiTranslate="global.messages.info.authenticated.link">sign in</a>
             </div>
-            <!-- <div class="alert alert-warning" *ngSwitchCase="false">
-                <span jhiTranslate="global.messages.info.register.noaccount">You don't have an account yet?</span>&nbsp;
-                <a class="alert-link" routerLink="register" jhiTranslate="global.messages.info.register.link">Register a new account</a>
-            </div> -->
         </div>
-
+        <br>
+        <h1 class="display-4 text-center">- SQLI -</h1>
+        <h1 class="display-4 text-center" jhiTranslate="home.appTitle">Système de détection des écarts d'imputations</h1>
+        <br>
     </div>
 </div>
 <div class="row justify-content-center" *jhiHasAnyAuthority="'ROLE_DELCO'">
